# database-setup-tools

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml  test.yaml
database_setup_tools/: __init__.py  session_manager.py  setup.py
tests/: docker-compose.yaml  postgres.crt  postgres.key  sample_model.py  test.db
tests/example/: app.py
tests/integration/: database_config.py  test_database_integration.py  test_database_setup.py  test_fastapi_integration.py
tests/integration/example/: app.py
tests/integration/migrations/versions/: 910ed4335d55_create_account_table.py
tests/unit/: sample_model.py  test_session_manager.py  test_setup.py
