[tool.poetry]
name = "sqlmodel-setup-tools"
version = "1.0.0"
description = "Tools to easily setup databases with sqlmodel"
authors = ["Jonas Scholl <jonas@code-specialist.com>","Yannic Schröer <yannic@code-specialist.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sqlmodel_setup_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.41"
sqlalchemy-utils = "^0.38.3"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
