[tool.poetry]
name = "database-setup-tools"
version = "1.0.0"
description = "Tools to easily setup databases opinionated towards FastAPI and SQLModel"
authors = ["Jonas Scholl <jonas@code-specialist.com>", "Yannic Schröer <yannic@code-specialist.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "database_setup_tools" }]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.41"
sqlalchemy-utils = "0.38.3"

[tool.poetry.dev-dependencies]
fastapi = "0.87.0"
uvicorn = "0.20.0"
sqlmodel = "0.0.8"
psycopg2-binary = "^2.9.5"
pytest-cov = "^4.0.0"
pytest = "7.2.0"
httpx = "0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-x -p no:warnings --cov-report=term --cov-report=term-missing --no-cov-on-fail --cov=database_setup_tools"